// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Custom Resource Lambda Tests Compute GSI deletion when non key attributes are modified 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when projection type is modified 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the hash key is renamed 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the index is removed completely 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Compute GSI deletion when the sort key is modified 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Extract table definition input from event test should extract the correct old table definition from event object 1`] = `
{
  "attributeDefinitions": [
    {
      "attributeName": "todoId",
      "attributeType": "S",
    },
    {
      "attributeName": "name",
      "attributeType": "S",
    },
    {
      "attributeName": "name2",
      "attributeType": "S",
    },
  ],
  "billingMode": "PROVISIONED",
  "globalSecondaryIndexes": [
    {
      "indexName": "byName2",
      "keySchema": [
        {
          "attributeName": "name2",
          "keyType": "HASH",
        },
      ],
      "projection": {
        "projectionType": "ALL",
      },
      "provisionedThroughput": {
        "readCapacityUnits": 5,
        "writeCapacityUnits": 5,
      },
    },
  ],
  "keySchema": [
    {
      "attributeName": "todoId",
      "keyType": "HASH",
    },
    {
      "attributeName": "name",
      "keyType": "RANGE",
    },
  ],
  "provisionedThroughput": {
    "readCapacityUnits": 5,
    "writeCapacityUnits": 5,
  },
  "sseSpecification": {
    "sseEnabled": true,
  },
  "streamSpecification": {
    "streamViewType": "NEW_AND_OLD_IMAGES",
  },
  "tableName": "mockTableName",
}
`;

exports[`Custom Resource Lambda Tests Extract table definition input from event test should extract the correct table definition from event object and parse it into create table input 1`] = `
{
  "attributeDefinitions": [
    {
      "attributeName": "todoId",
      "attributeType": "S",
    },
    {
      "attributeName": "name",
      "attributeType": "S",
    },
    {
      "attributeName": "name2",
      "attributeType": "S",
    },
  ],
  "billingMode": "PROVISIONED",
  "globalSecondaryIndexes": [
    {
      "indexName": "byName2",
      "keySchema": [
        {
          "attributeName": "name2",
          "keyType": "HASH",
        },
      ],
      "projection": {
        "projectionType": "ALL",
      },
      "provisionedThroughput": {
        "readCapacityUnits": 5,
        "writeCapacityUnits": 5,
      },
    },
  ],
  "keySchema": [
    {
      "attributeName": "todoId",
      "keyType": "HASH",
    },
    {
      "attributeName": "name",
      "keyType": "RANGE",
    },
  ],
  "provisionedThroughput": {
    "readCapacityUnits": 5,
    "writeCapacityUnits": 5,
  },
  "sseSpecification": {
    "sseEnabled": true,
  },
  "streamSpecification": {
    "streamViewType": "NEW_AND_OLD_IMAGES",
  },
  "tableName": "mockTableName",
  "tags": [
    {
      "Key": "key1",
      "Value": "value1",
    },
    {
      "Key": "key2",
      "Value": "value2",
    },
    {
      "Key": "key3",
      "Value": "value3",
    },
  ],
}
`;

exports[`Custom Resource Lambda Tests Extract table definition input from event test should extract the correct table definition from event object and parse it into create table input 2`] = `
{
  "AttributeDefinitions": [
    {
      "AttributeName": "todoId",
      "AttributeType": "S",
    },
    {
      "AttributeName": "name",
      "AttributeType": "S",
    },
    {
      "AttributeName": "name2",
      "AttributeType": "S",
    },
  ],
  "BillingMode": "PROVISIONED",
  "GlobalSecondaryIndexes": [
    {
      "IndexName": "byName2",
      "KeySchema": [
        {
          "AttributeName": "name2",
          "KeyType": "HASH",
        },
      ],
      "Projection": {
        "ProjectionType": "ALL",
      },
      "ProvisionedThroughput": {
        "ReadCapacityUnits": 5,
        "WriteCapacityUnits": 5,
      },
    },
  ],
  "KeySchema": [
    {
      "AttributeName": "todoId",
      "KeyType": "HASH",
    },
    {
      "AttributeName": "name",
      "KeyType": "RANGE",
    },
  ],
  "ProvisionedThroughput": {
    "ReadCapacityUnits": 5,
    "WriteCapacityUnits": 5,
  },
  "SSESpecification": {
    "Enabled": true,
  },
  "StreamSpecification": {
    "StreamEnabled": true,
    "StreamViewType": "NEW_AND_OLD_IMAGES",
  },
  "TableName": "mockTableName",
  "Tags": [
    {
      "Key": "key1",
      "Value": "value1",
    },
    {
      "Key": "key2",
      "Value": "value2",
    },
    {
      "Key": "key3",
      "Value": "value3",
    },
  ],
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute addition correctly 1`] = `
{
  "AttributeDefinitions": [
    {
      "AttributeName": "sk",
      "AttributeType": "S",
    },
  ],
  "GlobalSecondaryIndexUpdates": [
    {
      "Create": {
        "IndexName": "gsi2",
        "KeySchema": [
          {
            "AttributeName": "sk",
            "KeyType": "HASH",
          },
        ],
        "Projection": {
          "ProjectionType": "ALL",
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute deletion correctly 1`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Delete": {
        "IndexName": "gsi1",
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Get next GSI update should compute next addition correctly 1`] = `
{
  "AttributeDefinitions": [
    {
      "AttributeName": "newKey",
      "AttributeType": "S",
    },
  ],
  "GlobalSecondaryIndexUpdates": [
    {
      "Create": {
        "IndexName": "gsi3",
        "KeySchema": [
          {
            "AttributeName": "newKey",
            "KeyType": "HASH",
          },
        ],
        "Projection": {
          "ProjectionType": "ALL",
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get billing mode update should assign the table provision throughput when billingMode is "PROVISIONED" and no throughput defined in the new GSI 1`] = `
{
  "AttributeDefinitions": [
    {
      "AttributeName": "sk",
      "AttributeType": "S",
    },
  ],
  "GlobalSecondaryIndexUpdates": [
    {
      "Create": {
        "IndexName": "bySk",
        "KeySchema": [
          {
            "AttributeName": "sk",
            "KeyType": "HASH",
          },
        ],
        "Projection": {
          "ProjectionType": "ALL",
        },
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get billing mode update should compute the difference correctly when billingMode is changed to "PAY_PER_REQUEST" 1`] = `
{
  "BillingMode": "PAY_PER_REQUEST",
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get billing mode update should compute the difference correctly when billingMode is changed to "PROVISIONED" 1`] = `
{
  "BillingMode": "PROVISIONED",
  "ProvisionedThroughput": {
    "ReadCapacityUnits": 5,
    "WriteCapacityUnits": 5,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get billing mode update should compute the difference correctly when billingMode is changed to "PROVISIONED" and GSIs exist in current table 1`] = `
{
  "BillingMode": "PROVISIONED",
  "GlobalSecondaryIndexUpdates": [
    {
      "Update": {
        "IndexName": "gsi1",
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
    },
  ],
  "ProvisionedThroughput": {
    "ReadCapacityUnits": 5,
    "WriteCapacityUnits": 5,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get billing mode update should compute the difference correctly when billingMode is changed to "PROVISIONED" and GSIs exist in current table 2`] = `
{
  "GlobalSecondaryIndexUpdates": [
    {
      "Update": {
        "IndexName": "gsi1",
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 4,
          "WriteCapacityUnits": 4,
        },
      },
    },
  ],
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get deletion protection update should compute the difference correctly when deletion protection is disabled 1`] = `
{
  "DeletionProtectionEnabled": false,
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get deletion protection update should compute the difference correctly when deletion protection is disabled 2`] = `
{
  "DeletionProtectionEnabled": false,
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get deletion protection update should compute the difference correctly when deletion protection is enabled 1`] = `
{
  "DeletionProtectionEnabled": true,
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get point in time recovery update should compute the difference correctly when PITR is disabled 1`] = `
{
  "PointInTimeRecoverySpecification": {
    "PointInTimeRecoveryEnabled": false,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get point in time recovery update should compute the difference correctly when PITR is disabled 2`] = `
{
  "PointInTimeRecoverySpecification": {
    "PointInTimeRecoveryEnabled": false,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get point in time recovery update should compute the difference correctly when PITR is enabled 1`] = `
{
  "PointInTimeRecoverySpecification": {
    "PointInTimeRecoveryEnabled": true,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get server side encrytion update should compute the difference correctly when SSE is disabled 1`] = `
{
  "SSESpecification": {
    "Enabled": false,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get server side encrytion update should compute the difference correctly when SSE is disabled 2`] = `
{
  "SSESpecification": {
    "Enabled": false,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get server side encrytion update should compute the difference correctly when SSE is enabled 1`] = `
{
  "SSESpecification": {
    "Enabled": true,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get server side encrytion update should compute the difference correctly when SSE type is changed 1`] = `
{
  "SSESpecification": {
    "Enabled": true,
    "KMSMasterKeyId": "alias/aws/dynamodb/custom",
    "SSEType": "KMS",
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get stream update should compute the difference correctly when stream is disabled 1`] = `
{
  "StreamSpecification": {
    "StreamEnabled": false,
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get stream update should compute the difference correctly when stream is enabled 1`] = `
{
  "StreamSpecification": {
    "StreamEnabled": true,
    "StreamViewType": "NEW_AND_OLD_IMAGES",
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get stream update should compute the difference correctly when stream is enabled 2`] = `
{
  "StreamSpecification": {
    "StreamEnabled": true,
    "StreamViewType": "NEW_AND_OLD_IMAGES",
  },
  "TableName": "test-table",
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get time to live update should compute the difference correctly when attribute is renamed 1`] = `
{
  "TableName": "test-table",
  "TimeToLiveSpecification": {
    "AttributeName": "_ttl1",
    "Enabled": true,
  },
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get time to live update should compute the difference correctly when ttl is disabled 1`] = `
{
  "TableName": "test-table",
  "TimeToLiveSpecification": {
    "AttributeName": "_ttl",
    "Enabled": false,
  },
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get time to live update should compute the difference correctly when ttl is disabled 2`] = `
{
  "TableName": "test-table",
  "TimeToLiveSpecification": {
    "AttributeName": "_ttl",
    "Enabled": false,
  },
}
`;

exports[`Custom Resource Lambda Tests Non GSI update Get time to live update should compute the difference correctly when ttl is enabled 1`] = `
{
  "TableName": "test-table",
  "TimeToLiveSpecification": {
    "AttributeName": "_ttl",
    "Enabled": true,
  },
}
`;
